# django-channels-sse-demo

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
sse/: asgi.py  settings.py  urls.py  wsgi.py
sse/events/: admin.py  apps.py  consumers.py  models.py  signals.py  views.py
sse/events/migrations/: 0001_initial.py  0002_task_assigned_to.py
sse/events/templates/: home.html  notification.html  task.html
